doc: Add an author/email comment

--- a/hello.html
+++ b/hello.html
@@ -1,10 +1,8 @@
-
-
+<!-- Author: Soso Kumladze (soso-kumladze@epam.com) -->
 <html>
-    <head>
-        
-    </head>
-    <body>
-        <h1>Hello, World!</h1>
-    </body>
+  <head>
+  </head>
+  <body>
+    <h1>Hello, World!</h1>
+  </body>
 </html>
